# mrc

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GNUmakefile  GNUmakefile.in  LICENSE  README.md  autogen.sh  changelog  configure  configure.ac  dummy.cpp  make.config  mrc-config.cmake  mrc-unit-test.cpp  mrc.1  mrc.cpp  mrc.h.in  mrsrc.h  rsrc-test.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: VersionString.cmake  mrc-config.cmake
debian/: changelog  control  copyright  watch
doc/: mrc.1
example/: CMakeLists.txt
examples/esp-idf-rsrc/: CMakeLists.txt  README.md
examples/esp-idf-rsrc/main/: CMakeLists.txt  esp-rsrc-app.cpp  mrsrc.hpp
examples/simple/: CMakeLists.txt  mrc-user.cpp
rsrc/: resource-1.txt  resource-2.txt
rsrc/subdir/: resource-3.txt
rsrc/subdir/subsubdir/: resource-4.txt
src/: dummy.cpp  mrc-unit-test.cpp  mrc.cpp  mrsrc.h  revision.hpp  rsrc-test.cpp
